--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -94,10 +94,14 @@ body {
 
 .account-details {
   margin: 20px;
-  padding: 10px 15px;
+  padding: 10px;
   border-radius: 5px;
   border: 2px solid black;
   overflow-x: auto;
+}
+
+.account-details .account-head {
+    font-weight: 700;
 }
 
 
@@ -114,6 +118,8 @@ body {
     width: 100%;
     border-radius: 5px;
     box-shadow: 0 2px 40px rgba(0, 0, 0, 0.1);
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 .bottom {
@@ -202,9 +208,20 @@ button:hover {
     margin:0.7rem 0 0.7rem 0;
 }
 
+.message {
+    color: var(--bg-dim);
+    margin:0.7rem 0 0.7rem 0;
+}
 .error {
     color: var(--red);
     margin:0.7rem 0 0.7rem 0;
+}
+
+h2,
+h3,
+h4,
+h5 {
+    margin-bottom: 0.5rem;
 }
 
 
@@ -367,7 +384,7 @@ button:hover {
     background-color: var(--bg-dim);
     color: var(--white);
     /* font-size: 110%; */
-    width: 180%;
+    width: 700%;
 
 }
 /* if inactive reduce the width to 20% if you get what I am saying */
